--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "artist-hub-otmqc",
   "version": "1.0.0",
@@ -16,6 +15,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "date-fns": "^2.30.0"
   }
 }
